# trello-cli

./: .bumpversion.cfg  .gitignore  INSTALL.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  VERSION_MANAGEMENT.md  alembic.ini  build_executable.py  pyproject.toml  tlabeler.py  trello_tools_main.py  version_manager.py
alembic/: env.py
alembic/versions/: 6dd8d8894f46_initial_migration.py
src/trello_cli/: __init__.py  database.py  main.py  models.py  trello.py
tests/: test_ai_label_command.py  test_archive_command.py  test_board_commands.py  test_card_commands.py  test_config_command.py  test_config_init_command.py  test_default_board_id.py  test_help_command.py  test_label_command.py  test_label_management.py  test_load_command.py  test_reporting_command.py
