[project]
name = "trello-cli"
version = "0.1.0"
description = "A CLI for interacting with Trello."
requires-python = ">=3.11"
authors = [{ name = "Gemini", email = "gemini@google.com" }]
dependencies = [
    "py-trello",
    "typer",
    "rich",
    "sqlalchemy",
    "alembic",
    "google-generativeai",
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "ruff>=0.12.3",
]

[project.scripts]
trello-cli = "trello_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trello_cli"]

[tool.uv]
package = true
